# proyecto-final-2025-2-equipo-progra-3

./: README.md
pong_ai/: CMakeLists.txt  main.cpp
pong_ai/docs/: INFORME.md
pong_ai/include/apps/: ControllerDemo.h  IApplicationModule.h  PatternClassifier.h  SequencePredictor.h
pong_ai/include/utec/algebra/: tensor.h
pong_ai/include/utec/apps/: ControllerDemo.h  PatternClassifier.h  SequencePredictor.h
pong_ai/include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_factories.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
pong_ai/src/utec/apps/: ControllerDemo.cpp  PatternClassifier.cpp  SequencePredictor.cpp
pong_ai/tests/: prueba_3_classes.cpp  test_applications.cpp  test_neural_network.cpp  test_tensor.cpp
